Выполнение третьего практического задания

--- a/electronics_store/index.html
+++ b/electronics_store/index.html
@@ -17,6 +17,7 @@
                 </svg>
                 <span>Корзина</span>
             </button>
+            <div class="cart__info_block hide_block"></div>
         </div>
     </header>
     <main class="main">
