--- a/electronics_store/index.html
+++ b/electronics_store/index.html
@@ -15,16 +15,7 @@
             <div class="container header__container">
                 <div class="header__logo">E-shop</div>
                 <div class="header__info">
-                    <form action="#" class="header__search_form" @submit="filterProducts()">
-                        <label class="header__search_label" for="search-btn">
-                          <svg class="header__search_icon" width="27" height="28" viewBox="0 0 27 28"
-                            xmlns="http://www.w3.org/2000/svg">
-                            <path
-                              d="M19.0596 17.6259C20.6713 15.8658 21.6282 13.6048 21.7698 11.2225C21.9113 8.84018 21.2288 6.48173 19.8369 4.54318C18.445 2.60463 16.4285 1.20404 14.126 0.576619C11.8234 -0.0508009 9.3751 0.13316 7.19217 1.09761C5.00923 2.06205 3.22463 3.74825 2.13804 5.87302C1.05145 7.9978 0.729054 10.4318 1.225 12.7661C1.72094 15.1005 3.00501 17.1932 4.86158 18.6927C6.71814 20.1922 9.03413 21.0072 11.4206 21.0009C13.673 21.004 15.8645 20.27 17.6606 18.9109L25.4086 26.7179C25.4941 26.807 25.5965 26.8781 25.7099 26.927C25.8232 26.9759 25.9452 27.0017 26.0686 27.0029C26.1923 27.0033 26.3148 26.9782 26.4283 26.9292C26.5419 26.8801 26.6441 26.8082 26.7286 26.7179C26.9025 26.537 26.9997 26.2958 26.9997 26.0449C26.9997 25.794 26.9025 25.5528 26.7286 25.3719L19.0596 17.6259ZM2.88662 10.5009C2.89946 8.81563 3.41094 7.17187 4.35659 5.77685C5.30224 4.38183 6.63972 3.29801 8.20044 2.662C9.76115 2.02599 11.4752 1.86627 13.1266 2.20298C14.7779 2.53969 16.2926 3.35775 17.4797 4.55404C18.6668 5.75033 19.4732 7.27129 19.7972 8.92519C20.1212 10.5791 19.9483 12.2919 19.3002 13.8476C18.6522 15.4034 17.5581 16.7325 16.1559 17.6674C14.7536 18.6023 13.1059 19.1011 11.4206 19.1009C9.14916 19.0901 6.97482 18.1784 5.37484 16.566C3.77486 14.9537 2.87998 12.7724 2.88662 10.5009Z" />
-                          </svg>
-                        </label>
-                        <input class="header__search_input" id="search-btn" type="search" v-model="userSearch"/>
-                    </form>
+                    <filter-products></filter-products>
 
                     <button class="header__botton_cart" @click="isVisibleCart = !isVisibleCart">
                         <svg width="24" height="auto" viewBox="0 0 32 29" xmlns="http://www.w3.org/2000/svg">
@@ -33,24 +24,7 @@
                         <span>Корзина</span>
                     </button>
 
-                    <div class="cart__info_block" v-show="isVisibleCart">
-                        <p class="cart__info_block__empty" v-if="!cartProducts.length">В корзину ничего еще не добавлено!</p>
-                        <div class="cart__info_block__card" v-for="product of cartProducts" :key="product.id_product">
-                            <img class="cart__info_block__card__img" :src="getImgLink(product.id_product)">
-                            <div class="cart__info_block__card__description">
-                                <span class="cart__info_block__card__main_title" >
-                                    <span class="cart__info_block__card__title">{{product.product_name}}</span>
-                                    <span class="cart__info_block__card__price">{{product.price * product.quantity}}</span>
-                                </span>
-                                <p class="cart__info_block__card__quantity">
-                                    Количество:
-                                    <span class="cart__info_block__card__quantity_value">{{product.quantity}}</span>
-                                </p>
-                                <span class="cart__info_block__card__balance">{{product.price}}</span>
-                            </div>
-                            <button class="cart__info_block__card__btn" @click="removeProduct(product)" >&#10006;</button>
-                        </div>
-                    </div>
+                    <cart :cart-products="cartProducts" :is-visible-cart="isVisibleCart"></cart>
                 </div>
             </div>
         </header>
@@ -58,23 +32,16 @@
             <div class="container">
                 <section class="products">
                     <h1 class="products__title">Подборки товаров</h1>
-                    <div class="products__list">
-                        <div class="products__list_card" v-for="product of filteredProducts" :key="product.id_product">
-                            <div class="products__list_card__img_block">
-                                <img class="products__list_card__img" :src="getImgLink(product.id_product)">
-                            </div>
-                            <div class="products__list_card__descriptions">
-                                <p class="products__list_card__title">{{product.product_name}}</p>
-                                <p class="products__list_card__price">{{product.price}}</p>
-                            </div>
-                            <button class="products__list_card__btn" @click="addProduct(product)" data-id="product.id_product">Купить</button>
-                        </div>
-                    </div>
+                    <products-list :products="filteredProducts">
+                    </products-list>
                 </section>
             </div>
         </main>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.7.8"></script>
+    <script src="js/components/ProductComponent.js"></script>
+    <script src="js/components/CartComponent.js"></script>
+    <script src="js/components/FilterComponent.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
